# googleapi_tools

./: LICENSE  README.md  go.mod  main.go  probe.go
aas-rs/: README.md  spatula.proto
aas-rs/input/: packages.txt
aas-scope-rs/: Cargo.toml  README.md
aas-scope-rs/src/: main.rs
apkpure-go/: apkpure.go  check.txt  go.mod  main.go
apkpure-go/output/: packages.txt  sig.txt
data/: android_clients.json
gapi-service/: .env  go.mod
gapi-service/android/auth/: auth.go
gapi-service/rpc/: error_info.pb.go
req2proto/: .gitignore  README.md  go.sum  payload.go  process.go  utils.go
req2proto/parser/: proto.go
tools/: README.md
tools/aas-rs/: Cargo.toml  build.rs
tools/aas-rs/input/: sig.txt
tools/aas-rs/src/: main.rs
tools/aas-scope-rs/src/: main.rs
tools/gapi-service/: README.md  fetch.go  go.sum  main.go  parse.go
