[package]
name = "aas-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
base64 = "0.22.1"
futures = "0.3.30"
hex = "0.4.3"
prost = "0.13.3"
reqwest = "0.12.8"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
prost-build = "0.11"